@@ -2,6 +2,7 @@
 * 新增:
     01.新增 JFina 插件支持。HasorPlugin、HasorInterceptor、HasorHandler 三个插件。
     02.AppContext 新增两个 justInject 方法用于对某个标记了 Hasor 注解的对象执行依赖注入。
+    03.SpringModule 插件类，增加 DefaultHasorBeanName 常量，表示当 Hasor 和 Spirng 集成时。如果 Spring 中的那么默认 Bean ID。
 * 改进:
     01.Spring sechma 升级到 2.5.1。factoryID 不再是强制输入。如果没有配置 factoryID 会采用 "net.hasor.core.AppContext" 为默认名。
     02.简化 Spring 集成，取消与 Spring 的 Event 双向打通机制，如果开发者需要该功能可以自行基于 Spring 实现。
